# RemoteDiskHealthMonitor

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
src/agent/: CMakeLists.txt  IProbe.h  ISmartReader.h  JSonUtils.cpp  JSonUtils.hpp  Server.cpp  Server.h  SmartData.cpp  SmartData.h
src/agent/linux/: LinGeneralAnalyzer.cpp  LinGeneralAnalyzer.h  LinSmartAnalyzer.cpp  LinSmartAnalyzer.h  LinuxSmartReader.cpp  SmartCtlOutputParser.cpp  SmartCtlOutputParser.h
src/agent/windows/: CMDCommunication.cpp  WinGeneralAnalyzer.cpp  WinGeneralAnalyzer.h  WinSmartAnalyzer.cpp  WinSmartAnalyzer.h
src/common/: AgentStatus.rep  CMakeLists.txt  DiskInfo.cpp  DiskInfo.h  DiskInfoSerialize.h  JSonUtils.cpp  JSonUtils.hpp  ProbeStatus.h  ProbeStatusSerialize.h
src/monitor/: AgentsList.cpp  AgentsList.hpp  CMakeLists.txt  IAgentsStatusProvider.hpp
src/monitor/Qml/: AgentsView.qml  DiskDetailsItem.qml  MainWindow.qml  resources.qrc
tests/: CMakeLists.txt
tests/agent/: CMakeLists.txt  IProbeMock.h  SmartCtlOutputParserTests.cpp
tests/common/: CMakeLists.txt  ProbeStatusTests.cpp  SerializationTests.cpp
tests/monitor/: AgentsListTests.cpp  CMakeLists.txt
